added flyway scripts, openapi changes for more apis
